Created a component/lib to check online prices in order to send the token alerts to users that have open alerts to fulfill, this will be the next feature.
